force-app/zurich-base/main/default/objects/AdminSetupParameter__mdt/AdminSetupParameter__mdt.object-meta.xml
<CustomObject>
    <description>Metadata configuration for general use. Configured as a Name/Value pair</description>
    <label>AdminSetupParameter</label>
    <pluralLabel>AdminSetupParameters</pluralLabel>
</CustomObject>