force-app/zurich-base/main/default/objects/AdminSetupParameter__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Text to explain the purpose of the configured data.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>