force-app/zurich-base/main/default/objects/AdminSetupParameter__mdt/fields/KeyName__c.field-meta.xml
<CustomField>
    <fullName>KeyName__c</fullName>
    <description>The representing text for the configured value.</description>
    <label>KeyName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>